<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pre_text7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/select_the_possible_states"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBoxState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textState"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/visible"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:gravity="left|center" />

    </LinearLayout>
    
    <TextView
       android:id="@+id/textDescr"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/default_state"
       android:layout_marginBottom="5dip"
       android:layout_marginLeft="36dip"
       android:textColor="#C0C0C0"
       android:textSize="13sp"
       android:gravity="left|center" />
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBoxState2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textState2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hidden"
            android:textAllCaps="true"
            android:textColor="#FFFF00"
            android:textSize="20sp"
            android:gravity="left|center" />

    </LinearLayout>
    
    <TextView
       android:id="@+id/textDescr2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/hides_this_component_during_myapp_execution"
       android:layout_marginBottom="5dip"
       android:layout_marginLeft="36dip"
       android:textColor="#C0C0C0"
       android:textSize="13sp"
       android:gravity="left|center" />
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkBoxState3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textState3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/progress"
            android:textAllCaps="true"
            android:textColor="#00FF00"
            android:textSize="20sp"
            android:gravity="left|center" />

    </LinearLayout>
    
    <TextView
       android:id="@+id/textDescr3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/starts_this_component_with_a_progress_bar"
       android:layout_marginBottom="5dip"
       android:layout_marginLeft="36dip"
       android:textColor="#C0C0C0"
       android:textSize="13sp"
       android:gravity="left|center" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="285dp" >
    </RelativeLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" 
        android:layout_marginRight="10dp" 
        style="?android:attr/buttonBarStyle">
        
        <Button
        	android:id="@+id/buttonSave"
        	android:layout_width="158dp"
        	android:layout_height="wrap_content"
        	android:text="@string/save" 
        	style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" 
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
