<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/precondition"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.44" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF909090" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/mandatory" 
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button1"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:text="@string/set" 
            style="?android:attr/buttonBarButtonStyle">
            <requestFocus />
            </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unset" 
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>
