<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.44"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.44"
        android:gravity="center" 
        android:text="@string/noXml" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF909090" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_vota"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/vote" 
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_download"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/download" 
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>